# tiny_adventure

./: .gitignore  README.md  pyproject.toml
src/tiny_game/: game.py
src/tiny_game/assets/: tiny_adventure.pyxres
tests/: test_game.py
