[project]
name = "tiny-game"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jcerise", email = "jcerise06@gmail.com" }
]
dependencies = [
    "pyxel~=2.2",
    "black>=24.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_game"]
